fix notice on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,9 @@
   .notice {
     display: block;
   }
+  h1 {
+    margin-bottom: 0;
+  }
 }
 
 .school-grid {
